--- a/assets/style.css
+++ b/assets/style.css
@@ -104,7 +104,7 @@ main {
     border: 1px solid transparent;
     padding: 0;
     margin: 1em 1em 1em 0;
-    width: 150px;
+    width: 30%;
 }
 
 .thumbnail {
