really really fixing css this time

--- a/assets/style.css
+++ b/assets/style.css
@@ -116,7 +116,7 @@ main {
 .fancyPicture {
     background-color: #fff;
     margin-bottom: 25px;
-    width: 30%;
+    width: 150px;
     float: left;
     margin: 2em;
 }
