--- a/assets/style.css
+++ b/assets/style.css
@@ -33,8 +33,7 @@ header {
     left: 0;
     width: 100%;
     margin: 0;
-    padding: 0;
-    /* height 5em; */
+    padding: 0; 
 }
 
 .headerBlock {
@@ -77,7 +76,7 @@ header {
 }
 
 .divider {
-    width 100%;
+    width: 100%;
     height: 2px;
     margin: 1em 0;
 }
